Alteração de tematica

--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
 <body>
     <header>
         <nav class="menu">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Estatisticas</a></li>
-                <li><a href="">cadastro</a></li>
-                <li><a href="">login</a></li>
-            </ul>
+            <div class="container">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Estatisticas</a></li>
+                    <li><a href="">cadastro</a></li>
+                    <li><a href="">login</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
     <section class="section_banner_inicial">
         <div class="imagem_banner_inicial">
-            <img src="assests/img/8-eheGVRoaZkz5q6R.png">
+            <img src="assests/img/gxgwxi0k7kogmqjmfocd.webp">
         </div>
 
         <div class="texto_banner_inicial">
-            <h1>Emcontre aqui o seu duo</h1><br><br>
+            <h1>Encontre aqui o seu duo</h1><br><br>
             <p>Para uma escalada mais calma</p>
 
         </div>
 
     </section>
 
-    
+
 </body>
 
 </html>
