adição dos champions e mundança na background

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href=""><img src="assests/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
                     <li><a href="">Estatisticas</a></li>
                     <li><a href="">cadastro</a></li>
                     <li><a href="">login</a></li>
@@ -27,11 +27,61 @@
         <div class="imagem_banner_inicial">
             <img src="assests/img/gxgwxi0k7kogmqjmfocd.webp">
         </div>
+        <br><br>
 
         <div class="texto_banner_inicial">
-            <h1>Encontre aqui o seu duo</h1><br><br>
-            <p>Para uma escalada mais calma</p>
+            <img src="assests/img/mt_targon_crest_icon.png" alt=""> 
+            <h1>Targon</h1><br>
+            <p> O Monte Targon é a mais imponente montanha de Runeterra; uma torre gigantesca de rochas endurecidas pelo sol em meio a uma variedade de cumes. Nada igual em escala em qualquer lugar do mundo. Localizado longe da civilização, o Monte Targon é deveras remoto e impossível de alcançar, exceto pelos exploradores mais determinados. Muitas lendas estão ligadas ao Monte Targon e, assim como qualquer lugar que pertence a um mito, é um farol para sonhadores, loucos e exploradores em busca de aventura. Algumas almas corajosas tentam escalar a montanha impossível, talvez em busca de conhecimento ou iluminação, ou talvez atrás de glória ou para atender outro desejo da alma ao ver seu auge. A subida é quase impossível, e até mesmo para aqueles poucos que, de alguma forma, sobrevivem a chegada ao topo jamais falam sobre o que viram lá. Alguns voltam com uma assombração de olhares vazios em seus olhos, outros mudam completamente, imbuídos de um Aspecto de poder sobrenatural e que vai além da humanidade, com um destino que poucos mortais podem compreender.</p>
 
+        </div>
+
+    </section>
+
+    <section class="section_personagens">
+        <div class="titulo_personagens">
+            <h1> Campeões de Targon</h1>
+        </div>
+        <br><br>
+        <div>
+            <div class="caixa_campeoes_total">
+                <div class="caixa_campeoes">    
+                    <img src="assests/img/aphelios.jpg" alt="">
+                    <p><b>Aphelios</b><br>A arma dos devotos</p>
+                </div>
+                <div class="caixa_campeoes">
+                    <img src="assests/img/aurelion sol.jpg" alt="">
+                    <p><b>Aurelion Sol</b><br>O forjador de estrelas</p>
+                </div>
+                <div class="caixa_campeoes">
+                    <img src="assests/img/Diana.jpg" alt="">
+                    <p><b>Diana</b><br> O escárnio da lua</p>
+                </div>
+                <div class="caixa_campeoes">
+                    <img src="assests/img/Leona_0.jpg" alt="">
+                    <p><b>Leona</b><br> A alvorada radiante</p>
+                </div>
+            </div>
+            <br><br>
+            <div class="caixa_campeoes_total">
+                <div class="caixa_campeoes">
+                    <img src="assests/img/download (1).jpg" alt="">
+                    <p><b>Pantheon</b><br>A lança indestrutível</p>
+                </div>
+                <div class="caixa_campeoes">
+                    <img src="assests/img/Soraka_0.jpg" alt="">
+                    <p><b>Soraka</b><br>A filha das estrelas</p>
+                </div>
+                <div class="caixa_campeoes">
+                    <img src="assests/img/Taric_0.jpg" alt="">
+                    <p><b>Taric</b><br>O escudo de valoran</p>
+                </div>
+                <div class="caixa_campeoes">
+                    <img src="assests/img/Zoe_0.jpg" alt="">
+                    <p><b>Zoe</b><br> O aspecto do Crepúsculo</p>
+                </div>
+
+            </div>
         </div>
 
     </section>
