--- a/index.html
+++ b/index.html
@@ -15,14 +15,26 @@
             <div class="container">
                 <ul>
                     <li><a href=""><img src="assests/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
-                    <li><a href="">Estatisticas</a></li>
-                    <li><a href="">cadastro</a></li>
-                    <li><a href="">login</a></li>
+                    <li><button id="cadastro">cadastro</button></li>
                 </ul>
             </div>
         </nav>
     </header>
+    <div id="myModal_cadastro" class="modal_cadastro">
+        <div class="cadastro_conteudo">
+            <div class="modal_cadastro_header">
+                <span class="close">&times</span>
+                <h2>Registre-se</h2>
+            </div>
+            <div class="modal_cadastro_conteudo">
+                <p>texto do centro</p>
+                <p>outro texto</p>
+            </div>
+            <!-- <div class="modal_cadastro_footer">
 
+            </div> -->
+        </div>
+    </div>
     <section class="section_banner_inicial">
         <div class="imagem_banner_inicial">
             <img src="assests/img/gxgwxi0k7kogmqjmfocd.webp">
@@ -30,9 +42,19 @@
         <br><br>
 
         <div class="texto_banner_inicial">
-            <img src="assests/img/mt_targon_crest_icon.png" alt=""> 
+            <img src="assests/img/mt_targon_crest_icon.png" alt="">
             <h1>Targon</h1><br>
-            <p> O Monte Targon é a mais imponente montanha de Runeterra; uma torre gigantesca de rochas endurecidas pelo sol em meio a uma variedade de cumes. Nada igual em escala em qualquer lugar do mundo. Localizado longe da civilização, o Monte Targon é deveras remoto e impossível de alcançar, exceto pelos exploradores mais determinados. Muitas lendas estão ligadas ao Monte Targon e, assim como qualquer lugar que pertence a um mito, é um farol para sonhadores, loucos e exploradores em busca de aventura. Algumas almas corajosas tentam escalar a montanha impossível, talvez em busca de conhecimento ou iluminação, ou talvez atrás de glória ou para atender outro desejo da alma ao ver seu auge. A subida é quase impossível, e até mesmo para aqueles poucos que, de alguma forma, sobrevivem a chegada ao topo jamais falam sobre o que viram lá. Alguns voltam com uma assombração de olhares vazios em seus olhos, outros mudam completamente, imbuídos de um Aspecto de poder sobrenatural e que vai além da humanidade, com um destino que poucos mortais podem compreender.</p>
+            <p> O Monte Targon é a mais imponente montanha de Runeterra; uma torre gigantesca de rochas endurecidas pelo
+                sol em meio a uma variedade de cumes. Nada igual em escala em qualquer lugar do mundo. Localizado longe
+                da civilização, o Monte Targon é deveras remoto e impossível de alcançar, exceto pelos exploradores mais
+                determinados. Muitas lendas estão ligadas ao Monte Targon e, assim como qualquer lugar que pertence a um
+                mito, é um farol para sonhadores, loucos e exploradores em busca de aventura. Algumas almas corajosas
+                tentam escalar a montanha impossível, talvez em busca de conhecimento ou iluminação, ou talvez atrás de
+                glória ou para atender outro desejo da alma ao ver seu auge. A subida é quase impossível, e até mesmo
+                para aqueles poucos que, de alguma forma, sobrevivem a chegada ao topo jamais falam sobre o que viram
+                lá. Alguns voltam com uma assombração de olhares vazios em seus olhos, outros mudam completamente,
+                imbuídos de um Aspecto de poder sobrenatural e que vai além da humanidade, com um destino que poucos
+                mortais podem compreender.</p>
 
         </div>
 
@@ -45,39 +67,39 @@
         <br><br>
         <div>
             <div class="caixa_campeoes_total">
-                <div class="caixa_campeoes">    
-                    <img src="assests/img/aphelios.jpg" alt="">
+                <div class="caixa_campeoes">
+                    <img src="assests/img/Campeos/aphelios.jpg" alt="">
                     <p><b>Aphelios</b><br>A arma dos devotos</p>
                 </div>
                 <div class="caixa_campeoes">
-                    <img src="assests/img/aurelion sol.jpg" alt="">
+                    <img src="assests/img/Campeos/aurelion sol.jpg" alt="">
                     <p><b>Aurelion Sol</b><br>O forjador de estrelas</p>
                 </div>
                 <div class="caixa_campeoes">
-                    <img src="assests/img/Diana.jpg" alt="">
+                    <img src="assests/img/Campeos/Diana.jpg" alt="">
                     <p><b>Diana</b><br> O escárnio da lua</p>
                 </div>
                 <div class="caixa_campeoes">
-                    <img src="assests/img/Leona_0.jpg" alt="">
+                    <img src="assests/img/Campeos/Leona_0.jpg" alt="">
                     <p><b>Leona</b><br> A alvorada radiante</p>
                 </div>
             </div>
             <br><br>
             <div class="caixa_campeoes_total">
                 <div class="caixa_campeoes">
-                    <img src="assests/img/download (1).jpg" alt="">
+                    <img src="assests/img/Campeos/download (1).jpg" alt="">
                     <p><b>Pantheon</b><br>A lança indestrutível</p>
                 </div>
                 <div class="caixa_campeoes">
-                    <img src="assests/img/Soraka_0.jpg" alt="">
+                    <img src="assests/img/Campeos/Soraka_0.jpg" alt="">
                     <p><b>Soraka</b><br>A filha das estrelas</p>
                 </div>
                 <div class="caixa_campeoes">
-                    <img src="assests/img/Taric_0.jpg" alt="">
+                    <img src="assests/img/Campeos/Taric_0.jpg" alt="">
                     <p><b>Taric</b><br>O escudo de valoran</p>
                 </div>
                 <div class="caixa_campeoes">
-                    <img src="assests/img/Zoe_0.jpg" alt="">
+                    <img src="assests/img/Campeos/Zoe_0.jpg" alt="">
                     <p><b>Zoe</b><br> O aspecto do Crepúsculo</p>
                 </div>
 
@@ -90,3 +112,5 @@
 </body>
 
 </html>
+
+<script src="assests/index.js"></script>
