--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
             <div class="container">
                 <ul>
                     <li><a href=""><img src="assests/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
-                    <li><button
-                            onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
-
+                    <li><button onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
+                    <li><button onclick="document.getElementById('login').style.display='block'">Login</button></li>
                 </ul>
             </div>
         </nav>
@@ -39,6 +38,9 @@
                 <label for="psw-repeat"><b>Repita a senha</b></label>
                 <input type="password" placeholder="Repita a senha" name="psw-repeat" required>
 
+                <label for="Campeao_fav"><b>Campeão Favorito</b></label>
+                <input type="text" placeholder="Insira um campeão" name="camp_fav">
+
                 <label>
                     <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
                 </label>
@@ -50,6 +52,31 @@
                         class="cancelbtn">Cancelar</button>
                     <button type="submit" class="signupbtn">Sign Up</button>
                 </div>
+            </div>
+        </form>
+    </div>
+
+    <div id="login" class="modal_login">
+        <span onclick="document.getElementById('login').style.display='none'" class="close" 
+        title="close Modal">&times</span>
+        
+        <form class="login_conteudo" action="/action_page.php">
+            <div class="container_login">
+                <h1>Cadastrar-se</h1>
+                <p>Por favor preencha todos os campos</p>
+                <hr>
+                <label for="email"><b>Email</b></label>
+                <input type="text" placeholder="Insira um Email" name="email" required>
+
+                <label for="senha"><b>Senha</b></label>
+                <input type="password" placeholder="Enter Password" name="Senha" required>
+
+                <div class="clearfix">
+                    <button type="button" onclick="document.getElementById('login').style.display='none'"
+                        class="cancelbtn">Cancelar</button>
+                    <button type="submit" class="loginbtn">Sign In</button>
+                </div>
+
             </div>
         </form>
     </div>
