--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class="container">
                 <ul>
                     <li><a href=""><img src="assests/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
-                    <li><button onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
+                    <li><button
+                            onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
                     <li><button onclick="document.getElementById('login').style.display='block'">Login</button></li>
                 </ul>
             </div>
@@ -57,9 +58,9 @@
     </div>
 
     <div id="login" class="modal_login">
-        <span onclick="document.getElementById('login').style.display='none'" class="close" 
-        title="close Modal">&times</span>
-        
+        <span onclick="document.getElementById('login').style.display='none'" class="close"
+            title="close Modal">&times</span>
+
         <form class="login_conteudo" action="/action_page.php">
             <div class="container_login">
                 <h1>Cadastrar-se</h1>
@@ -113,12 +114,12 @@
         <br><br>
         <div>
             <div class="caixa_campeoes_total">
-                <div class="caixa_campeoes">
-                    <img src="assests/img/Campeos/aphelios.jpg" alt="avatar">
-                    <div class="container_campeoes"><a href="aphelios.html">
-                            <h4><b>Aphelios</b></h4>
-                            <p>A arma dos devotos</p>
-                        </a>
+                <div class="caixa_campeoes"><a href="aphelios.html">
+                        <img src="assests/img/Campeos/aphelios.jpg" alt="avatar">
+                    </a>
+                    <div class="container_campeoes">
+                        <h4><b>Aphelios</b></h4>
+                        <p>A arma dos devotos</p>
                     </div>
                 </div>
                 <div class="caixa_campeoes">
