--- a/index.html
+++ b/index.html
@@ -122,22 +122,25 @@
                         <p>A arma dos devotos</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes">
-                    <img src="assests/img/Campeos/aurelion sol.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Aurelion.html">
+                        <img src="assests/img/Campeos/aurelion sol.jpg" alt="avatar">
+                    </a>
                     <div class="container_campeoes">
                         <h4><b>Aurelion Sol</b></h4>
                         <p>O forjador de estrelas</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes">
-                    <img src="assests/img/Campeos/Diana.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Diana.html">
+                        <img src="assests/img/Campeos/Diana.jpg" alt="avatar">
+                    </a>
                     <div class="container_campeoes">
                         <h4><b>Diana</b></h4>
                         <p>O escárnio da lua</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes">
-                    <img src="assests/img/Campeos/Leona_0.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Leona.html">
+                        <img src="assests/img/Campeos/Leona_0.jpg" alt="avatar">
+                    </a>
                     <div class="container_campeoes">
                         <h4><b>Leona</b></h4>
                         <p>A alvorada radiante</p>
@@ -146,29 +149,33 @@
             </div>
             <br><br>
             <div class="caixa_campeoes_total">
-                <div class="caixa_campeoes">
-                    <img src="assests/img/Campeos/download (1).jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Pantheon.html">
+                        <img src="assests/img/Campeos/download (1).jpg" alt="avatar">
+                    </a>
                     <div class="container_campeoes">
                         <h4><b>Pantheon</b></h4>
                         <p>lança indestrutível</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes">
-                    <img src="assests/img/Campeos/Soraka_0.jpg" alt="">
+                <div class="caixa_campeoes"><a href="Soraka.html">
+                        <img src="assests/img/Campeos/Soraka_0.jpg" alt="">
+                    </a>
                     <div class="container_campeoes">
                         <h4><b>Soraka</b></h4>
                         <p>A filha das estrelas</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes">
-                    <img src="assests/img/Campeos/Taric_0.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Taric.html">
+                        <img src="assests/img/Campeos/Taric_0.jpg" alt="avatar">
+                    </a>
                     <div class="container_campeoes">
                         <h4><b>Taric</b></h4>
                         <p>O escudo de valoran</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes">
-                    <img src="assests/img/Campeos/Zoe_0.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Zoe.html">
+                        <img src="assests/img/Campeos/Zoe_0.jpg" alt="avatar">
+                    </a>
                     <div class="container_campeoes">
                         <h4><b>Zoe</b></h4>
                         <p>O aspecto do Crepúsculo</p>
