inserção da web-data-viz

--- a/public/aphelios.html
+++ b/public/aphelios.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assests/style.css">
-    <link rel="stylesheet" href="assests/style_campeoes.css">
+    <link rel="stylesheet" href=".assests/style.css">
+    <link rel="stylesheet" href=".assests/style_campeoes.css">
 </head>
 <body>
     <header>
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href="index.html"><img src="assests/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
+                    <li><a href="index.html"><img src="" style="width: 100px;" alt=""></a></li>
                     <li><button
                             onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
 
