--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assests/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -14,74 +14,13 @@
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href=""><img src="assests/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
-                    <li><button
-                            onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
-                    <li><button onclick="document.getElementById('login').style.display='block'">Login</button></li>
+                    <li><a href=""><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
+                    <li><a href="cadastro.html">Cadastro</a></button>
+                    <li><a href="login.html">Login</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-    <div id="cadastro" class="modal_cadastro">
-        <span onclick="document.getElementById('cadastro').style.display='none'" class="close"
-            title="Close Modal">&times;</span>
-        <form class="cadastro-conteudo" action="/action_page.php">
-            <div class="container_cadastro">
-                <h1>Cadastrar-se</h1>
-                <p>Por favor preencha todos os campos</p>
-                <hr>
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Insira um Email" name="email" required>
-
-                <label for="senha"><b>Senha</b></label>
-                <input type="password" placeholder="Enter Password" name="Senha" required>
-
-                <label for="psw-repeat"><b>Repita a senha</b></label>
-                <input type="password" placeholder="Repita a senha" name="psw-repeat" required>
-
-                <label for="Campeao_fav"><b>Campeão Favorito</b></label>
-                <input type="text" placeholder="Insira um campeão" name="camp_fav">
-
-                <label>
-                    <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-                </label>
-
-                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-                <div class="clearfix">
-                    <button type="button" onclick="document.getElementById('cadastro').style.display='none'"
-                        class="cancelbtn">Cancelar</button>
-                    <button type="submit" class="signupbtn">Sign Up</button>
-                </div>
-            </div>
-        </form>
-    </div>
-
-    <div id="login" class="modal_login">
-        <span onclick="document.getElementById('login').style.display='none'" class="close"
-            title="close Modal">&times</span>
-
-        <form class="login_conteudo" action="/action_page.php">
-            <div class="container_login">
-                <h1>Cadastrar-se</h1>
-                <p>Por favor preencha todos os campos</p>
-                <hr>
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Insira um Email" name="email" required>
-
-                <label for="senha"><b>Senha</b></label>
-                <input type="password" placeholder="Enter Password" name="Senha" required>
-
-                <div class="clearfix">
-                    <button type="button" onclick="document.getElementById('login').style.display='none'"
-                        class="cancelbtn">Cancelar</button>
-                    <button type="submit" class="loginbtn">Sign In</button>
-                </div>
-
-            </div>
-        </form>
-    </div>
-
     <section class="section_banner_inicial">
         <div class="imagem_banner_inicial">
             <img src="assests/img/gxgwxi0k7kogmqjmfocd.webp">
@@ -114,7 +53,7 @@
         <br><br>
         <div>
             <div class="caixa_campeoes_total">
-                <div class="caixa_campeoes"><a href="aphelios.html">
+                <div class="caixa_campeoes"><a href="campeoes_htmls/aphelios.html">
                         <img src="assests/img/Campeos/aphelios.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
@@ -122,7 +61,7 @@
                         <p>A arma dos devotos</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Aurelion.html">
+                <div class="caixa_campeoes"><a href="campeoes_htmls/Aurelion.html">
                         <img src="assests/img/Campeos/aurelion sol.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
@@ -130,7 +69,7 @@
                         <p>O forjador de estrelas</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Diana.html">
+                <div class="caixa_campeoes"><a href="campeoes_htmls/Diana.html">
                         <img src="assests/img/Campeos/Diana.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
@@ -138,7 +77,7 @@
                         <p>O escárnio da lua</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Leona.html">
+                <div class="caixa_campeoes"><a href="campeoes_htmls/Leona.html">
                         <img src="assests/img/Campeos/Leona_0.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
@@ -149,7 +88,7 @@
             </div>
             <br><br>
             <div class="caixa_campeoes_total">
-                <div class="caixa_campeoes"><a href="Pantheon.html">
+                <div class="caixa_campeoes"><a href="campeoes_htmls/Pantheon.html">
                         <img src="assests/img/Campeos/download (1).jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
@@ -157,7 +96,7 @@
                         <p>lança indestrutível</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Soraka.html">
+                <div class="caixa_campeoes"><a href="campeoes_htmls/Soraka.html">
                         <img src="assests/img/Campeos/Soraka_0.jpg" alt="">
                     </a>
                     <div class="container_campeoes">
@@ -165,7 +104,7 @@
                         <p>A filha das estrelas</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Taric.html">
+                <div class="caixa_campeoes"><a href="campeoes_htmls/Taric.html">
                         <img src="assests/img/Campeos/Taric_0.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
@@ -173,7 +112,7 @@
                         <p>O escudo de valoran</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="Zoe.html">
+                <div class="caixa_campeoes"><a href="campeoes_htmls/Zoe.html">
                         <img src="assests/img/Campeos/Zoe_0.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
