novas imgs para os champions

--- a/public/Aurelion.html
+++ b/public/Aurelion.html
@@ -5,25 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assests/style.css">
-    <link rel="stylesheet" href="assests/style_campeoes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_campeoes.css">
 </head>
 <body>
     <header>
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href="index.html"><img src="assests/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
-                    <li><button
-                            onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
-
+                    <li><a href="index.html"><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
+                    <li><a href="cadastro.html">Cadastro</a></button>
+                    <li><a href="login.html">Login</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <section class="section_banner_campeoes">
         <div class="section_banner_imagem">
-            <img src="assests/img/Campeos/aurelion sol.jpg" alt="">
+            <img src="assets/img/Campeos/aurelion-sol.webp" alt="">
         </div>
 
         <DIV class="texto_banner_campeoes">
@@ -63,5 +62,5 @@
 </body>
 </html>
 
-<script src="assests/index.js"></script>
-<script src="assests/script_campeoes.js"></script>
+
+<script src="js/script_campeoes.js"></script>
