--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
     </header>
     <section class="section_banner_inicial">
         <div class="imagem_banner_inicial">
-            <img src="assests/img/gxgwxi0k7kogmqjmfocd.webp">
+            <img src="assets/img/gxgwxi0k7kogmqjmfocd.webp">
         </div>
         <br><br>
 
         <div class="texto_banner_inicial">
-            <img src="assests/img/mt_targon_crest_icon.png" alt="">
+            <img src="assets/img/mt_targon_crest_icon.png" alt="">
             <h1>Targon</h1><br>
             <p> O Monte Targon é a mais imponente montanha de Runeterra; uma torre gigantesca de rochas endurecidas pelo
                 sol em meio a uma variedade de cumes. Nada igual em escala em qualquer lugar do mundo. Localizado longe
@@ -53,32 +53,32 @@
         <br><br>
         <div>
             <div class="caixa_campeoes_total">
-                <div class="caixa_campeoes"><a href="campeoes_htmls/aphelios.html">
-                        <img src="assests/img/Campeos/aphelios.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="aphelios.html">
+                        <img src="assets/img/Campeos/aphelios.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Aphelios</b></h4>
                         <p>A arma dos devotos</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="campeoes_htmls/Aurelion.html">
-                        <img src="assests/img/Campeos/aurelion sol.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Aurelion.html">
+                        <img src="assets/img/Campeos/aurelion sol.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Aurelion Sol</b></h4>
                         <p>O forjador de estrelas</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="campeoes_htmls/Diana.html">
-                        <img src="assests/img/Campeos/Diana.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Diana.html">
+                        <img src="assets/img/Campeos/Diana.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Diana</b></h4>
                         <p>O escárnio da lua</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="campeoes_htmls/Leona.html">
-                        <img src="assests/img/Campeos/Leona_0.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Leona.html">
+                        <img src="assets/img/Campeos/Leona_0.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Leona</b></h4>
@@ -88,32 +88,32 @@
             </div>
             <br><br>
             <div class="caixa_campeoes_total">
-                <div class="caixa_campeoes"><a href="campeoes_htmls/Pantheon.html">
-                        <img src="assests/img/Campeos/download (1).jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Pantheon.html">
+                        <img src="assets/img/Campeos/download (1).jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Pantheon</b></h4>
                         <p>lança indestrutível</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="campeoes_htmls/Soraka.html">
-                        <img src="assests/img/Campeos/Soraka_0.jpg" alt="">
+                <div class="caixa_campeoes"><a href="Soraka.html">
+                        <img src="assets/img/Campeos/Soraka_0.jpg" alt="">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Soraka</b></h4>
                         <p>A filha das estrelas</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="campeoes_htmls/Taric.html">
-                        <img src="assests/img/Campeos/Taric_0.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Taric.html">
+                        <img src="assets/img/Campeos/Taric_0.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Taric</b></h4>
                         <p>O escudo de valoran</p>
                     </div>
                 </div>
-                <div class="caixa_campeoes"><a href="campeoes_htmls/Zoe.html">
-                        <img src="assests/img/Campeos/Zoe_0.jpg" alt="avatar">
+                <div class="caixa_campeoes"><a href="Zoe.html">
+                        <img src="assets/img/Campeos/Zoe_0.jpg" alt="avatar">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Zoe</b></h4>
