--- a/public/Leona.html
+++ b/public/Leona.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assests/style.css">
-    <link rel="stylesheet" href="assests/style_campeoes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_campeoes.css">
 </head>
 
 <body>
@@ -15,18 +15,17 @@
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href="index.html"><img src="assests/img/mt_targon_emblem.png" style="width: 100px;"
+                    <li><a href="index.html"><img src="assets/img/mt_targon_emblem.png" style="width: 100px;"
                                 alt=""></a></li>
-                    <li><button
-                            onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
-
+                    <li><a href="cadastro.html">Cadastro</a></button>
+                    <li><a href="login.html">Login</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <section class="section_banner_campeoes">
         <div class="section_banner_imagem">
-            <img src="assests/img/Campeos/Leona_0.jpg" alt="">
+            <img src="assets/img/Campeos/leona lvl2.webp" alt="">
         </div>
 
         <DIV class="texto_banner_campeoes">
