--- a/public/aphelios.html
+++ b/public/aphelios.html
@@ -5,57 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href=".assests/style.css">
-    <link rel="stylesheet" href=".assests/style_campeoes.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_campeoes.css">
 </head>
 <body>
     <header>
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href="index.html"><img src="" style="width: 100px;" alt=""></a></li>
-                    <li><button
-                            onclick="document.getElementById('cadastro').style.display='block'">Cadastrar-se</button>
-
+                    <li><a href="index.html"><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
+                    <li><a href="cadastro.html">Cadastro</a></button>
+                    <li><a href="login.html">Login</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-    <div id="cadastro" class="modal_cadastro">
-        <span onclick="document.getElementById('cadastro').style.display='none'" class="close"
-            title="Close Modal">&times;</span>
-        <form class="cadastro-conteudo" action="/action_page.php">
-            <div class="container_cadastro">
-                <h1>Cadastrar-se</h1>
-                <p>Por favor preencha todos os campos</p>
-                <hr>
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Insira um Email" name="email" required>
-
-                <label for="senha"><b>Senha</b></label>
-                <input type="password" placeholder="Enter Password" name="Senha" required>
-
-                <label for="psw-repeat"><b>Repita a senha</b></label>
-                <input type="password" placeholder="Repita a senha" name="psw-repeat" required>
-
-                <label>
-                    <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-                </label>
-
-                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-                <div class="clearfix">
-                    <button type="button" onclick="document.getElementById('cadastro').style.display='none'"
-                        class="cancelbtn">Cancelar</button>
-                    <button type="submit" class="signupbtn">Sign Up</button>
-                </div>
-            </div>
-        </form>
-    </div>
-
     <section class="section_banner_campeoes">
         <div class="section_banner_imagem">
-            <img src="assests/img/Campeos/aphelios.jpg" alt="">
+            <img src="assets/img/Campeos/Champ_Aphelios_lv2.png" alt="">
         </div>
 
         <DIV class="texto_banner_campeoes">
@@ -109,5 +76,4 @@
 </body>
 </html>
 
-<script src="assests/index.js"></script>
-<script src="assests/script_campeoes.js"></script>
+<script src="js/script_campeoes.js"></script>
