Configuração da web-data-viz
alteração nas routes,modulese e config do database

--- a/public/Diana.html
+++ b/public/Diana.html
@@ -113,6 +113,4 @@
 </body>
 
 </html>
-
-<script src="assests/index.js"></script>
-<script src="assests/script_campeoes.js"></script>
+<script src="js/script_campeoes.js"></script>
