--- a/public/Zoe.html
+++ b/public/Zoe.html
@@ -104,5 +104,4 @@
 
 </html>
 
-<script src="assests/index.js"></script>
-<script src="assests/script_campeoes.js"></script>
+<script src="js/script_campeoes.js"></script>
