--- a/public/Leona.html
+++ b/public/Leona.html
@@ -114,5 +114,4 @@
 
 </html>
 
-<script src="assests/index.js"></script>
-<script src="assests/script_campeoes.js"></script>
+<script src="js/script_campeoes.js"></script>
