--- a/public/Soraka.html
+++ b/public/Soraka.html
@@ -102,5 +102,4 @@
 
 </html>
 
-<script src="assests/index.js"></script>
-<script src="assests/script_campeoes.js"></script>
+<script src="js/script_campeoes.js"></script>
