--- a/public/Taric.html
+++ b/public/Taric.html
@@ -110,5 +110,4 @@
 
 </html>
 
-<script src="assests/index.js"></script>
-<script src="assests/script_campeoes.js"></script>
+<script src="js/script_campeoes.js"></script>
