--- a/public/login.html
+++ b/public/login.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
     <title>login</title>
 </head>
-<body>
+<body class="body_cadastrologin">
     <header>
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href="index.html"><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
-                    <li><a href="cadastro.html">Cadastro</a></button>
-                    <li><a href="login.html">Login</a></li>
+                    <li><a href=""><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
+                    <div class="usuario_opcao">
+                        <li><a href="cadastro.html">Cadastro</a></button>
+                        <li><a href="login.html">Login</a></li>
+                    </div>
                 </ul>
             </div>
         </nav>
