adção da slideshow

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -13,7 +13,7 @@
         <nav class="menu">
             <div class="container">
                 <ul>
-                    <li><a href=""><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
+                    <li><a href="index.html"><img src="assets/img/mt_targon_emblem.png" style="width: 100px;" alt=""></a></li>
                     <div class="usuario_opcao">
                         <li><a href="cadastro.html">Cadastro</a></button>
                         <li><a href="login.html">Login</a></li>
@@ -35,7 +35,10 @@
 
                 <label for="senha"><b>Senha</b></label>
                 <input type="password" placeholder="Enter Password" id="input_Senha" required>
-
+                
+                <label for="psw-repeat"><b>Repita a senha</b></label>
+                <input type="password" placeholder="Repita a senha" id="psw_repeat" required>
+                
                 <label for="champ_fav"><b>Campeão favorito</b></label>
                 <select id="champion_fav" required>
                     <option value="">Selecione um Campeão</option>
