--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,8 @@
         <div>
             <div class="caixa_campeoes_total">
                 <div class="caixa_campeoes"><a href="aphelios.html">
-                        <img src="assets/img/Campeos/aphelios.jpg" alt="avatar">
+                    <div class="numero_campeao">1/8</div>
+                        <img src="assets/img/Campeos/aphelios.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Aphelios</b></h4>
@@ -64,7 +65,8 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="Aurelion.html">
-                        <img src="assets/img/Campeos/aurelion sol.jpg" alt="avatar">
+                    <div class="numero_campeao">2/8</div>
+                        <img src="assets/img/Campeos/aurelion sol.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Aurelion Sol</b></h4>
@@ -72,7 +74,8 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="Diana.html">
-                        <img src="assets/img/Campeos/Diana.jpg" alt="avatar">
+                    <div class="numero_campeao">3/8</div>
+                        <img src="assets/img/Campeos/Diana.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Diana</b></h4>
@@ -80,18 +83,17 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="Leona.html">
-                        <img src="assets/img/Campeos/Leona_0.jpg" alt="avatar">
+                    <div class="numero_campeao">4/8</div>
+                        <img src="assets/img/Campeos/Leona_0.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Leona</b></h4>
                         <p>A alvorada radiante</p>
                     </div>
                 </div>
-            </div>
-            <br><br>
-            <div class="caixa_campeoes_total">
                 <div class="caixa_campeoes"><a href="Pantheon.html">
-                        <img src="assets/img/Campeos/download (1).jpg" alt="avatar">
+                    <div class="numero_campeao">5/8</div>
+                        <img src="assets/img/Campeos/download (1).jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Pantheon</b></h4>
@@ -99,7 +101,8 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="Soraka.html">
-                        <img src="assets/img/Campeos/Soraka_0.jpg" alt="">
+                    <div class="numero_campeao">6/8</div>
+                        <img src="assets/img/Campeos/Soraka_0.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Soraka</b></h4>
@@ -107,7 +110,8 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="Taric.html">
-                        <img src="assets/img/Campeos/Taric_0.jpg" alt="avatar">
+                    <div class="numero_campeao">7/8</div>
+                        <img src="assets/img/Campeos/Taric_0.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Taric</b></h4>
@@ -115,7 +119,8 @@
                     </div>
                 </div>
                 <div class="caixa_campeoes"><a href="Zoe.html">
-                        <img src="assets/img/Campeos/Zoe_0.jpg" alt="avatar">
+                    <div class="numero_campeao">8/8</div>
+                        <img src="assets/img/Campeos/Zoe_0.jpg" style="width:100%">
                     </a>
                     <div class="container_campeoes">
                         <h4><b>Zoe</b></h4>
@@ -123,12 +128,25 @@
                     </div>
                 </div>
 
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
             </div>
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
+                <span class="dot" onclick="currentSlide(5)"></span>
+                <span class="dot" onclick="currentSlide(6)"></span>
+                <span class="dot" onclick="currentSlide(7)"></span>
+                <span class="dot" onclick="currentSlide(8)"></span>
+              </div>
         </div>
 
     </section>
-
-
 </body>
 
 </html>
+
+<script src="js/index.js"></script>
