Alteração do nome da tela usuario e criação do css cadastro

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cadastro_login.css">
     <title>Cadastro</title>
 </head>
-<body class="body_cadastrologin">
+<body>
     <header>
         <nav class="menu">
             <div class="container">
