--- a/public/login.html
+++ b/public/login.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cadastro_login.css">
     <title>login</title>
 </head>
-<body class="body_cadastrologin">
+<body>
     <header>
         <nav class="menu">
             <div class="container">
@@ -37,7 +38,7 @@
 
                 <div class="clearfix">
                     <button type="button" onclick="Limpar()"
-                    class="cancelbtn">Cancelar</button>s
+                    class="cancelbtn">Cancelar</button>
                     <button onclick="entrar()" class="signupbtn">Login</button>
                 </div>
             </div>
